--- a/responsive.css
+++ b/responsive.css
@@ -4,10 +4,13 @@
     }
     .nav-iteam-container{
         flex-direction: column;
+        align-items: flex-start;
+        margin-left: 0px;
     }
     .nav-iteam-container a{
         margin-top: 20px;
     }
+   
     
     
     
