--- a/style.css
+++ b/style.css
@@ -2,27 +2,29 @@
 
 body{
     font-family: 'Work Sans', sans-serif;
+    
 }
 /* nav section */
 
 .nav-container{
     height: 80px;
-    min-height: 50px;
+   
     display: flex;
     align-items: center;
     max-width: 1400px;
-    margin: 0 auto;
-    
+    margin: 0 auto;   
 }
 .nav-iteam-container{
     width: 40%;
     display: flex;
     justify-content: space-between;
+    
 }
 
 .nav-iteam-container a{
     text-decoration: none;
-    color: black;
+    color: #3C354F;
+    
     
 }
 .about{
@@ -36,7 +38,8 @@ body{
 .follow{
     margin-right: 100px;
     background: rgba(11, 2, 35, 0.10);
-    padding: 10px 80px 10px 20px;
+    /* padding: 10px 80px 10px 10px; */
+    padding: 10px;
     border-radius: 8px;
 }
 .logo-container{
@@ -44,12 +47,14 @@ body{
     display: flex;
     width: 50%;
    
+
+   
 }
 .logo-container img{
     
     width: 50px;
     object-fit: cover;
-    padding: 50px 0 50px 240px ;
+    padding: 50px 0 50px 100px ;
     margin-right: 10px;
     
 }
@@ -60,7 +65,12 @@ body{
 }
 .font-decoration{
     color: #FF42A5;
+    font-weight: 300px;
     
+}
+.first-logo{
+    font-weight: 800;
+    font-size: 40px;
 }
 .youtube-logo{
     padding-left: 20px;
@@ -69,4 +79,147 @@ body{
 .tiktok-logo{
     padding-left: 20px;
 }
+/* Nav design End Here */
+/* Banner design start */
+.banner-container{
+   
+    margin: 50px auto 0;
+    max-width: 1400px;
+    padding-left: 160px;
+    display: flex;
+}
+.banner-text{
+   
+    width: 40%;
+    padding-top: 70px;
+    
+}
+.banner-color{
+    color: #534C64;
+}
+.banner-img{
+    
+    width: 40%;
+}
+.click-icone{
+    color: red;
+    padding-right: 10px;
 
+}
+.download-icone{
+    padding-right: 10px;
+}
+.peoples-icone{
+    padding-right: 10px;
+}
+.primary-button{
+    padding: 8px 20px;
+    border-radius: 48px;
+    background-color: #FF42A5;
+    border: 0;
+    color: #FFF;
+}
+.secondary-button{
+    padding: 8px 20px;
+    border-radius: 48px;
+    background-color:#4EC5F7;;
+    border: 0;
+    color: #FFF;
+}
+.heading-one{
+    color: #0B0223;
+
+font-size: 30px;
+font-style: normal;
+font-weight: 600;
+line-height: normal;
+text-transform: uppercase;
+margin: 0%;
+
+}
+.heading-two{
+    font-size: 70px;
+    font-weight: 800;
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    color: transparent;
+    -webkit-background-clip: text;
+    margin: 0%;
+    
+}
+.banner-img{
+    
+    
+}
+.banner-img img{
+    width: 100%;
+}
+/* Complex Banner Section start */
+.complex-banner-container{
+   
+    max-width: 1400px;
+    display: flex;
+}
+.complex-banner-img{
+    
+    width: 50%;
+    padding: 100px;
+
+}
+.complex-banner-img img{
+    width: 100%;
+    /* padding: 50px; */
+}
+.complex-banner-text{
+    
+    width: 50%;
+    padding: 100px 170px 100px 0;
+    text-align: right;
+    
+
+}
+.primary-font{
+    font-size: 30px;
+    font-weight: 700;
+    background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
+    color: transparent;
+    -webkit-background-clip: text;
+    margin: 0%;
+    
+}
+.complex-text{
+    margin-bottom: 20px;
+}
+.inverted-comma{
+    color: #534C64;
+font-family: Work Sans;
+font-size: 20px;
+font-style: normal;
+font-weight: 700;
+line-height: 45px;
+
+}
+/* Compound section start */
+.game-img-icone{
+    display: flex;
+    gap: 10px;
+    padding-left: 10px;
+    align-items: center;
+    
+
+}
+.compound-img-icone{
+    display: flex;
+    padding: 50px 250px;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
+    align-items: center;
+
+
+}
+.compound-img-icone img{
+    width: 30px;
+    height: 30px;
+
+}
