--- a/style.css
+++ b/style.css
@@ -223,3 +223,14 @@ line-height: 45px;
     height: 30px;
 
 }
+/* middle Section Start */
+.heading-title-new{
+    text-align: center;
+    border: 1px solid blue;
+}
+.paragraph-title{
+    font-size: medium;
+}
+.four-img-section{
+    display: flex;
+}
