--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ body{
     font-family: 'Work Sans', sans-serif;
     
 }
+.container {
+    max-width: 1280px;
+    margin: auto;
+}
 /* nav section */
 
 .nav-container{
@@ -233,4 +237,67 @@ line-height: 45px;
 }
 .four-img-section{
     display: flex;
+    gap:18px;
+    margin-top:50px;
 }
+.btn_overly {
+    width: 100%;
+    height: 81%;
+     background: #141414e3;
+display: flex;
+    position: relative;
+    bottom: 489px;
+    border-radius: 23px;
+    justify-content: center;
+}
+.play {
+    width: 40px;
+}
+/* 
+Start 
+*/
+.inner_play {
+    display: flex;
+    justify-content: space-between;
+ 
+   
+}
+.img_area {
+    width: 50%;
+}
+.img_area div img {
+    display: inline-block;
+}
+.img_one {
+    width: 634.833px;
+}
+.play_text {
+    margin-top: 40px;
+}
+.img_two {
+width: 318.5px;
+height: 365.083px;
+position: relative;
+    left: -136px;
+    bottom: 286px;
+}
+.title_text{
+      margin-top: 40px;
+    text-align: right;
+    font-size: 48px;
+font-style: normal;
+font-weight: 700;
+margin-bottom: 24px;
+}
+ .span {
+    color:  #F948B2;
+}
+.text_ {
+    color: #534C64;
+text-align: right;
+line-height: 30px;
+width: 353px;
+}
+/* 
+Start  END
+*/
