--- a/style.css
+++ b/style.css
@@ -78,20 +78,21 @@ body{
     font-size: 40px;
 }
 .youtube-logo{
-    padding-left: 20px;
+    padding-left: 10px;
     color: red;
 }
 .tiktok-logo{
-    padding-left: 20px;
+    padding-left: 10px;
 }
 /* Nav design End Here */
 /* Banner design start */
 .banner-container{
    
-    margin: 50px auto 0;
+    margin: 0 auto 0;
     max-width: 1400px;
     padding-left: 160px;
     display: flex;
+    background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
 }
 .banner-text{
    
@@ -161,6 +162,9 @@ margin: 0%;
    
     max-width: 1400px;
     display: flex;
+    background: linear-gradient(90deg, rgba(255, 66, 165, 0.03) 0%, rgba(255, 66, 165, 0.03) 100%);
+    height: 100%;
+    margin: 0 auto 0;
 }
 .complex-banner-img{
     
@@ -175,8 +179,10 @@ margin: 0%;
 .complex-banner-text{
     
     width: 50%;
-    padding: 100px 170px 100px 0;
+    padding: 100px 120px 100px 0;
     text-align: right;
+    margin: 0 auto 0;
+    
     
 
 }
