--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ body{
     margin: auto;
 }
 /* nav section */
+.nav-background{
+    margin-left: 200px;
+    margin-right: 200px;
+}
 
 .nav-container{
     height: 80px;
@@ -32,6 +36,7 @@ body{
     
     
 }
+
 .about{
     margin: 0;
     padding: 10px;
